<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp"
    android:background="@color/white" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp" >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/label_item_material_name"/>
            <TextView
                android:id="@+id/tv_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp" >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/label_item_material_number"/>
            <TextView
                android:id="@+id/tv_number"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp" >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/label_item_material_price"/>
            <TextView
                android:id="@+id/tv_price"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"/>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/bt_delete"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bt_fitting_back_del"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>